add padding-top to footer-wrapper

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         <!-- /header-content -->
 
         <!-- scroll -->
-        <a href="#" class="header-scroll">скролл вниз</a>
+        <a href="#scroll" class="header-scroll">скролл вниз</a>
         <!-- /scroll -->
     </header>
-    <main class="main">
+    <main class="main" id="scroll">
         <div class="container">
             <!-- main-row -->
             <div class="main-row">
