change link  in tours page, wrapped cards in link (deleted div), delete fix height in cards

--- a/tracking.html
+++ b/tracking.html
@@ -22,68 +22,16 @@
             </nav>
         </div>
     </header>
-    <main class="inner-page-tours">
+    <main class="inner-page-extreme">
         <div class="container">
-            <div class="inner-page-tours-header">
-                <h1 class="main-content-title">Туры и направления</h1>
-            </div>
-            <!-- cards-wrapper-->
-            <div class="cards-wrapper">
-                <!-- cards-row-->
-                <div class="cards-row">
-                    <!-- card -->
-                    <a href="#" class="card gray-color">
-                        <img src="./img/cards/card-tours-1.jpg" alt="Бесплатные туры">
-                        <div class="tours-description">
-                            <h3 class="tours-description-title">Бесплатные туры</h3>
-                        </div>
-                    </a>
-                <!-- /card -->
+            <div class="inner-page-extreme-row">
+                <div class="inner-page-extreme-nav">
 
-                <!-- card -->
-                    <a href="#" class="card sand-color">
-                        <img src="./img/cards/card-tours-2.jpg" alt="Экстремальный отдых">
-                        <div class="tours-description">
-                            <h3 class="tours-description-title">Экстремальный отдых</h3>
-                        </div>
-                    </a>
-                    <!-- /card -->
                 </div>
-                <!-- /cards-row-->
+                <div class="inner-page-extreme-wrapper">
 
-                <!-- cards-row-->
-                <div class="cards-row">
-                    <div class="cards-row-column">
-                        <!-- card -->
-                        <a href="#" class="card blue-color">
-                            <img src="./img/cards/card-tours-3.jpg" alt="Невероятные приключения">
-                            <div class="tours-description">
-                                <h3 class="tours-description-title">Невероятные приключения</h3>
-                            </div>
-                        </a>
-                    <!-- /card -->
-
-                    <!-- card -->
-                        <a href="./tracking.html" class="card brown-color">
-                            <img src="./img/cards/card-tours-4.jpg" alt="Трекинг походы">
-                            <div class="tours-description">
-                                <h3 class="tours-description-title">Трекинг походы</h3>
-                            </div>
-                        </a>
-                        <!-- /card -->
-                    </div>
-                        <!-- card -->
-                        <a href="#" class="card green-color">
-                            <img src="./img/cards/card-tours-5.jpg" alt="Экзотические джунгли">
-                            <div class="tours-description">
-                                <h3 class="tours-description-title">Экзотические джунгли</h3>
-                            </div>
-                        </a>
-                        <!-- /card -->
                 </div>
-                <!-- /cards-row-->
             </div>
-            <!-- /cards-wrapper-->
         </div>
     </main>
     <footer class="footer">
