--- a/tracking.html
+++ b/tracking.html
@@ -22,15 +22,36 @@
             </nav>
         </div>
     </header>
-    <main class="inner-page-extreme">
+    <main class="inner-page-tours">
         <div class="container">
-            <div class="inner-page-extreme-row">
-                <div class="inner-page-extreme-nav">
+            <div class="inner-page-article-row">
+                    <nav class="inner-page-article-nav">
+                        <h3 class="inner-page-article-nav-title">Туры и направления</h3>
+                        <ul class="inner-page-article-nav-list">
+                            <li><a href="#">Бесплатные туры</a></li>
+                            <li><a href="#">Невероятные приключения. Пункт длинной в две строки.</a></li>
+                            <li><a href="#">Экстремальный отдых</a></li>
+                            <li><a class="active" href="#">Трекинг походы</a></li>
+                            <li><a href="#">Экзотические джунгли</a></li>
+                        </ul>
+                    </nav>
+                <article class="inner-page-article">
+                    <h1>Трекинг походы</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <b>Ut enim ad minim</b> veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <a href="#">Duis aute irure</a> dolor in reprehenderit <b>in voluptate</b> velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    <img src="./img/articles/tracking-page-1.jpg" alt="Трекинг походы">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <b>Ut enim ad minim</b> veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <a href="#">Duis aute irure</a> dolor in reprehenderit <b>in voluptate</b> velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
 
-                </div>
-                <div class="inner-page-extreme-wrapper">
+                    <h2>Заголовок второго уровня</h2>
+                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
 
-                </div>
+                    <h3>Заголовок третьего уровня</h3>
+                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+
+                    <h4>Заголовок четвертого уровня</h4>
+                    <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+                    Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt.</p>
+                </article>
             </div>
         </div>
     </main>
