add contacts page

--- a/tracking.html
+++ b/tracking.html
@@ -22,7 +22,7 @@
             </nav>
         </div>
     </header>
-    <main class="inner-page-tours">
+    <main class="inner-page">
         <div class="container">
             <div class="inner-page-article-row">
                     <nav class="inner-page-article-nav">
