--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@
             <!-- main-row -->
             <div class="main-row">
                 <div class="main-content">
-                    <h2 class="main-content-title">Популярные направления</h2>
+                    <div class="main-content-title">
+                        <h2 class="main-title">Популярные направления</h2>
+                    </div>
                     <div class="main-content-text">
                         <p>Когда <b>Горный Алтай</b> называют второй Швейцарией, алтайцы отвечают, что нужно еще разобраться, кто тут второй. Чтобы расставить все по местам, отправляйтесь в путешествие по Чуйскому тракту , по <a href="#">Горному Алтаю</a> до самой Монголии. 962 км — полный маршрут <b>Новосибирск—Новоалтайск—Бийск—Майма</b> —государственная граница с Монголией.</p>
                     </div>
-                    <a href="#" class="main-content-btn">Подробнее</a>
+                    <a href="#" class="button">Подробнее</a>
                 </div>
                 <div class="main-content-img">
                     <img src="./img/main-page/content-1.jpg" alt="Популярные направления">
@@ -55,11 +57,13 @@
             <!-- main-row -->
             <div class="main-row">
                 <div class="main-content">
-                    <h2 class="main-content-title">Впечатляющие маршруты</h2>
+                    <div class="main-content-title">
+                        <h2 class="main-title">Впечатляющие маршруты</h2>
+                    </div>
                     <div class="main-content-text">
                         <p>Вишенкой на торте станет поездка в Национальный парк <b>Порт-Кэмпбелл</b> через Ocean Road, которая сама по себе стоит визита в <a href="#">Австралию</a>. Полюбуетесь одной из главных достопримечательностей страны — скалами, которые до 1922 года были известны в народе как <b>«Хрюшка и поросята»,</b> а сегодня носят название «Двенадцать апостолов».</p>
                     </div>
-                    <a href="#" class="main-content-btn">Подробнее</a>
+                    <a href="#" class="button">Подробнее</a>
                 </div>
                 <div class="main-content-img">
                     <img src="./img/main-page/content-2.jpg" alt="Впечатляющие маршруты">
