--- a/tours.html
+++ b/tours.html
@@ -22,10 +22,10 @@
             </nav>
         </div>
     </header>
-    <main class="inner-page-tours">
+    <main class="inner-page">
         <div class="container">
             <div class="inner-page-tours-header">
-                <h1 class="main-content-title">Туры и направления</h1>
+                <h1 class="main-title">Туры и направления</h1>
             </div>
             <!-- cards-wrapper-->
             <div class="cards-wrapper">
