--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li class="header-nav-item"><a href="./tours.html">Туры и направления</a></li>
                     <li class="header-nav-item"><a href="#">О компании</a></li>
                     <li class="header-nav-item"><a href="#">Галерея</a></li>
-                    <li class="header-nav-item"><a href="#">Контакты</a></li>
+                    <li class="header-nav-item"><a href="./contacts.html">Контакты</a></li>
                 </ul>
             </nav>
         </div>
