--- a/contacts.html
+++ b/contacts.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forest Travel</title>
+    <title>Контакты - агенство ФорестТревел</title>
     <link rel="stylesheet" href="./css/main.css">
+    
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicons/favicon-16x16.png">
+    <link rel="manifest" href="./img/favicons/site.webmanifest">
+    <link rel="mask-icon" href="./img/favicons/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="./img/favicons/favicon.ico">
+    <meta name="msapplication-TileColor" content="#265847">
+    <meta name="msapplication-config" content="./img/favicons/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
     <header class="header-inner"> 
@@ -31,9 +41,9 @@
                         <!-- Contacts-info -->
                         <div class="contacts-column-info">
                             <div class="contact-widget">
-                                <h4 class="contacts-widget-title">
+                                <h3 class="contacts-widget-title">
                                     Телефон и адрес
-                                </h4>
+                                </h3>
                                 <div class="contacts-widget-body">
                                     <ul class="contacts-widget-list">
                                         <li class="tel"><a href="tel:+7905555-55-55">+7 (905) 555-55-55</a></li>
@@ -43,9 +53,9 @@
                                 </div>
                             </div>
                             <div class="contact-widget">
-                                <h4 class="contacts-widget-title">
+                                <h3 class="contacts-widget-title">
                                     Карта
-                                </h4>
+                                </h3>
                                 <div class="contacts-widget-body">
                                     <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A6cdaaf19a657bee6ed311f034680daac66b1fd4eaab01d1922477e10f8cd57ce&amp;width=470&amp;height=345&amp;lang=ru_RU&amp;scroll=true"></script>
                                 </div>
@@ -57,8 +67,8 @@
                     <form class="form">
                         <h3 class="form-title">Заявка на подбор тура</h3>
                             <!-- Form-text -->
-                        <div class="form-block">
-                            <h4 class="form-blok-title">Личные данные</h4>
+                        <fieldset class="form-block">
+                            <legend class="form-blok-title">Личные данные</legend>
 
                             <input class="input" type="text" placeholder="Введите имя">
     
@@ -66,12 +76,12 @@
                                 <input class="input" type="tel" required placeholder="Телефон">
                                 <input class="input" type="email" required placeholder="Email">
                             </div>
-                        </div>
+                        </fieldset>
                             <!-- /Form-text -->
 
                             <!-- Radio -->
-                        <div class="form-block">
-                            <h4 class="form-blok-title">Количество человек для тура</h4>
+                        <fieldset class="form-block">
+                            <legend class="form-blok-title">Количество человек для тура</legend>
                             <label class="label-radio">
                                 <input class="real-radio" type="radio" name="number-of-people">
                                 <span class="custom-radio"></span>
@@ -87,12 +97,12 @@
                                 <span class="custom-radio"></span>
                                 <span>11 человек и более</span>
                             </label>
-                        </div>
+                        </fieldset>
                             <!-- /Radio -->
 
                             <!-- Checkbox -->
-                        <div class="form-block">
-                            <h4 class="form-blok-title">Какие направления вам интересны</h4>
+                        <fieldset class="form-block">
+                            <legend class="form-blok-title">Какие направления вам интересны</legend>
                             <label class="label-checkbox">
                                 <input class="real-checkbox" type="checkbox">
                                 <span class="custom-checkbox"></span>
@@ -113,7 +123,7 @@
                                 <span class="custom-checkbox"></span>
                                 <span>Комбинированные: море, горы, города, лес. Далеко-далеко за словесными горами в стране гласных и согласных живут, рыбные тексты. Заголовок безопасную языком рот приставка, прямо коварный, предложения послушавшись вскоре великий даже бросил снова грамматики ее по всей залетают первую рыбными!</span>
                             </label>
-                        </div>
+                        </fieldset>
                             <!-- /Checkbox -->
                             <input class="button" type="submit" value="Отправить заявку">
                     </form>
@@ -131,26 +141,26 @@
                 </div>
                 <div class="footer-widget-wrapper">  
                     <div class="footer-widget footer-widget-info">
-                        <h4 class="footer-widget-title">Информация</h4>
+                        <h3 class="footer-widget-title">Информация</h3>
                         <ul class="footer-widget-list">
-                            <li class="footer-widget-items"><a href="#" >Главная</a></li>
+                            <li class="footer-widget-items"><a href="./index.html" >Главная</a></li>
                             <li class="footer-widget-items"><a href="#" >О компании</a></li>
                             <li class="footer-widget-items"><a href="#" >Галерея</a></li>
                             <li class="footer-widget-items"><a href="#" >Блог</a></li>
                         </ul>
                     </div>
                     <div class="footer-widget footer-widget-services">
-                        <h4 class="footer-widget-title">Услуги</h4>
+                        <h3 class="footer-widget-title">Услуги</h3>
                         <ul class="footer-widget-list">
                             <li class="footer-widget-items"><a href="#" >Бесплатные туры</a></li>
                             <li class="footer-widget-items"><a href="#" >Невероятные приключения</a></li>
                             <li class="footer-widget-items"><a href="#" >Экстремальный отдых</a></li>
                             <li class="footer-widget-items"><a href="#" >Экзотические джунгли</a></li>
-                            <li class="footer-widget-items"><a href="#" >Трекинг походы</a></li>
+                            <li class="footer-widget-items"><a href="./tracking.html" >Трекинг походы</a></li>
                         </ul>
                     </div>
                     <div class="footer-widget footer-widget-contacts">
-                        <h4 class="footer-widget-title">Контакты</h4>
+                        <h3 class="footer-widget-title">Контакты</h3>
                         <ul class="footer-widget-list">
                             <li class="footer-widget-items">+7 (905) 555-55-55</li>
                             <li class="footer-widget-items">info@foresttravel.com</li>
