--- a/index.html
+++ b/index.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forest Travel</title>
+    <title>Туристические походы - агенство ФорестТревел</title>
+    <meta name="description" content="Туристические походы, путешествия город Москва">
+    <meta name="keywords" content="Популярные направления, горный Алтай, путешествия">
     <link rel="stylesheet" href="./css/main.css">
+    
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicons/favicon-16x16.png">
+    <link rel="manifest" href="./img/favicons/site.webmanifest">
+    <link rel="mask-icon" href="./img/favicons/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="./img/favicons/favicon.ico">
+    <meta name="msapplication-TileColor" content="#265847">
+    <meta name="msapplication-config" content="./img/favicons/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
     <header class="header"> 
@@ -38,7 +50,7 @@
     <main class="main" id="scroll">
         <div class="container">
             <!-- main-row -->
-            <div class="main-row">
+            <article class="main-row">
                 <div class="main-content">
                     <div class="main-content-title">
                         <h2 class="main-title">Популярные направления</h2>
@@ -51,11 +63,11 @@
                 <div class="main-content-img">
                     <img src="./img/main-page/content-1.jpg" alt="Популярные направления">
                 </div>
-            </div>
+            </article>
             <!-- /main-row -->
 
             <!-- main-row -->
-            <div class="main-row">
+            <article class="main-row">
                 <div class="main-content">
                     <div class="main-content-title">
                         <h2 class="main-title">Впечатляющие маршруты</h2>
@@ -68,7 +80,7 @@
                 <div class="main-content-img">
                     <img src="./img/main-page/content-2.jpg" alt="Впечатляющие маршруты">
                 </div>
-            </div>  
+            </article>  
             <!-- /main-row -->           
         </div>
     </main>
@@ -84,26 +96,26 @@
                 <!-- footer-widget-wrapper -->
                 <div class="footer-widget-wrapper">  
                     <div class="footer-widget footer-widget-info">
-                        <h4 class="footer-widget-title">Информация</h4>
+                        <h3 class="footer-widget-title">Информация</h3>
                         <ul class="footer-widget-list">
-                            <li class="footer-widget-items"><a href="#" >Главная</a></li>
+                            <li class="footer-widget-items"><a href="./index.html" >Главная</a></li>
                             <li class="footer-widget-items"><a href="#" >О компании</a></li>
                             <li class="footer-widget-items"><a href="#" >Галерея</a></li>
                             <li class="footer-widget-items"><a href="#" >Блог</a></li>
                         </ul>
                     </div>
                     <div class="footer-widget footer-widget-services">
-                        <h4 class="footer-widget-title">Услуги</h4>
+                        <h3 class="footer-widget-title">Услуги</h3>
                         <ul class="footer-widget-list">
                             <li class="footer-widget-items"><a href="#" >Бесплатные туры</a></li>
                             <li class="footer-widget-items"><a href="#" >Невероятные приключения</a></li>
                             <li class="footer-widget-items"><a href="#" >Экстремальный отдых</a></li>
                             <li class="footer-widget-items"><a href="#" >Экзотические джунгли</a></li>
-                            <li class="footer-widget-items"><a href="#" >Трекинг походы</a></li>
+                            <li class="footer-widget-items"><a href="./tracking.html" >Трекинг походы</a></li>
                         </ul>
                     </div>
                     <div class="footer-widget footer-widget-contacts">
-                        <h4 class="footer-widget-title">Контакты</h4>
+                        <h3 class="footer-widget-title">Контакты</h3>
                         <ul class="footer-widget-list">
                             <li class="footer-widget-items">+7 (905) 555-55-55</li>
                             <li class="footer-widget-items">info@foresttravel.com</li>
