--- a/tours.html
+++ b/tours.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forest Travel</title>
+    <title>Туры и наравления - агенство ФорестТревел</title>
     <link rel="stylesheet" href="./css/main.css">
+    
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicons/favicon-16x16.png">
+    <link rel="manifest" href="./img/favicons/site.webmanifest">
+    <link rel="mask-icon" href="./img/favicons/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="./img/favicons/favicon.ico">
+    <meta name="msapplication-TileColor" content="#265847">
+    <meta name="msapplication-config" content="./img/favicons/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
     <header class="header-inner"> 
@@ -35,7 +45,7 @@
                     <a href="#" class="card gray-color">
                         <img src="./img/cards/card-tours-1.jpg" alt="Бесплатные туры">
                         <div class="tours-description">
-                            <h3 class="tours-description-title">Бесплатные туры</h3>
+                            <h2 class="tours-description-title">Бесплатные туры</h2>
                         </div>
                     </a>
                 <!-- /card -->
@@ -44,7 +54,7 @@
                     <a href="#" class="card sand-color">
                         <img src="./img/cards/card-tours-2.jpg" alt="Экстремальный отдых">
                         <div class="tours-description">
-                            <h3 class="tours-description-title">Экстремальный отдых</h3>
+                            <h2 class="tours-description-title">Экстремальный отдых</h2>
                         </div>
                     </a>
                     <!-- /card -->
@@ -58,7 +68,7 @@
                         <a href="#" class="card blue-color">
                             <img src="./img/cards/card-tours-3.jpg" alt="Невероятные приключения">
                             <div class="tours-description">
-                                <h3 class="tours-description-title">Невероятные приключения</h3>
+                                <h2 class="tours-description-title">Невероятные приключения</h2>
                             </div>
                         </a>
                     <!-- /card -->
@@ -67,7 +77,7 @@
                         <a href="./tracking.html" class="card brown-color">
                             <img src="./img/cards/card-tours-4.jpg" alt="Трекинг походы">
                             <div class="tours-description">
-                                <h3 class="tours-description-title">Трекинг походы</h3>
+                                <h2 class="tours-description-title">Трекинг походы</h2>
                             </div>
                         </a>
                         <!-- /card -->
@@ -76,7 +86,7 @@
                         <a href="#" class="card green-color">
                             <img src="./img/cards/card-tours-5.jpg" alt="Экзотические джунгли">
                             <div class="tours-description">
-                                <h3 class="tours-description-title">Экзотические джунгли</h3>
+                                <h2 class="tours-description-title">Экзотические джунгли</h2>
                             </div>
                         </a>
                         <!-- /card -->
@@ -95,26 +105,26 @@
                 </div>
                 <div class="footer-widget-wrapper">  
                     <div class="footer-widget footer-widget-info">
-                        <h4 class="footer-widget-title">Информация</h4>
+                        <h3 class="footer-widget-title">Информация</h3>
                         <ul class="footer-widget-list">
-                            <li class="footer-widget-items"><a href="#" >Главная</a></li>
+                            <li class="footer-widget-items"><a href="./index.html" >Главная</a></li>
                             <li class="footer-widget-items"><a href="#" >О компании</a></li>
                             <li class="footer-widget-items"><a href="#" >Галерея</a></li>
                             <li class="footer-widget-items"><a href="#" >Блог</a></li>
                         </ul>
                     </div>
                     <div class="footer-widget footer-widget-services">
-                        <h4 class="footer-widget-title">Услуги</h4>
+                        <h3 class="footer-widget-title">Услуги</h3>
                         <ul class="footer-widget-list">
                             <li class="footer-widget-items"><a href="#" >Бесплатные туры</a></li>
                             <li class="footer-widget-items"><a href="#" >Невероятные приключения</a></li>
                             <li class="footer-widget-items"><a href="#" >Экстремальный отдых</a></li>
                             <li class="footer-widget-items"><a href="#" >Экзотические джунгли</a></li>
-                            <li class="footer-widget-items"><a href="#" >Трекинг походы</a></li>
+                            <li class="footer-widget-items"><a href="./tracking.html" >Трекинг походы</a></li>
                         </ul>
                     </div>
                     <div class="footer-widget footer-widget-contacts">
-                        <h4 class="footer-widget-title">Контакты</h4>
+                        <h3 class="footer-widget-title">Контакты</h3>
                         <ul class="footer-widget-list">
                             <li class="footer-widget-items">+7 (905) 555-55-55</li>
                             <li class="footer-widget-items">info@foresttravel.com</li>
