--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Туристические походы, путешествия город Москва">
     <meta name="keywords" content="Популярные направления, горный Алтай, путешествия">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/media.css">
     
     <link rel="apple-touch-icon" sizes="180x180" href="./img/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./img/favicons/favicon-32x32.png">
@@ -32,6 +33,9 @@
                     <li class="header-nav-item"><a href="#">Галерея</a></li>
                     <li class="header-nav-item"><a href="./contacts.html">Контакты</a></li>
                 </ul>
+                <button class="header-nav-button">
+                    <img src="./img/icons/menu.svg" alt="menu">
+                </button>
             </nav>
         </div>
         <!-- /header-row -->
