--- a/tours.html
+++ b/tours.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Туры и наравления - агенство ФорестТревел</title>
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/media.css">
     
     <link rel="apple-touch-icon" sizes="180x180" href="./img/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./img/favicons/favicon-32x32.png">
@@ -19,7 +20,7 @@
 </head>
 <body>
     <header class="header-inner"> 
-        <div class="header-row">
+        <div class="header-row header-row--inner">
             <div class="logo">ФорестТревел</div>
             <nav class="header-nav">
                 <ul class="header-nav-list">
@@ -29,13 +30,16 @@
                     <li class="header-nav-item"><a href="#">Галерея</a></li>
                     <li class="header-nav-item"><a href="./contacts.html">Контакты</a></li>
                 </ul>
+                <button class="header-nav-button">
+                    <img src="./img/icons/menu.svg" alt="menu">
+                </button>
             </nav>
         </div>
     </header>
     <main class="inner-page">
         <div class="container">
             <div class="inner-page-tours-header">
-                <h1 class="main-title">Туры и направления</h1>
+                <h1 class="main-title main-title--tours">Туры и направления</h1>
             </div>
             <!-- cards-wrapper-->
             <div class="cards-wrapper">
