--- a/contacts.html
+++ b/contacts.html
@@ -29,19 +29,22 @@
                     <li class="header-nav-item"><a href="#">Галерея</a></li>
                     <li class="header-nav-item"><a href="#">Контакты</a></li>
                 </ul>
+                <button class="header-nav-button">
+                    <img src="./img/icons/menu.svg" alt="menu">
+                </button>
             </nav>
         </div>
     </header>
-    <main class="inner-page">
+    <main class="inner-page inner-page--contats">
         <div class="container">
             <div class="contacts-title">
-                <h1 class="main-title">Контактная информация</h1>
+                <h1 class="main-title main-title--contacts">Контактная информация</h1>
             </div>
                 <div class="contacts-row">
                         <!-- Contacts-info -->
                         <div class="contacts-column-info">
                             <div class="contact-widget">
-                                <h3 class="contacts-widget-title">
+                                <h3 class="contacts-widget-title contacts-widget-title--adress">
                                     Телефон и адрес
                                 </h3>
                                 <div class="contacts-widget-body">
@@ -56,8 +59,8 @@
                                 <h3 class="contacts-widget-title">
                                     Карта
                                 </h3>
-                                <div class="contacts-widget-body">
-                                    <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A6cdaaf19a657bee6ed311f034680daac66b1fd4eaab01d1922477e10f8cd57ce&amp;width=470&amp;height=345&amp;lang=ru_RU&amp;scroll=true"></script>
+                                <div class="contacts-widget-body contacts-widget-body--map">
+                                    <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A6cdaaf19a657bee6ed311f034680daac66b1fd4eaab01d1922477e10f8cd57ce&amp;width=100%&amp;height=100%&amp;lang=ru_RU&amp;scroll=true"></script>
                                 </div>
                             </div>
                         </div>
@@ -90,7 +93,7 @@
                             <label class="label-radio">
                                 <input class="real-radio" type="radio" name="number-of-people">
                                 <span class="custom-radio"></span>
-                                <span>5 - 10 человек Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Города, подпоясал заголовок свой переулка пояс ipsum, строчка встретил сбить предложения инициал вопрос! Себя вопроса она единственное над снова на берегу.</span>
+                                <span>5 - 10 человек</span>
                             </label>
                             <label class="label-radio">
                                 <input class="real-radio" type="radio" name="number-of-people">
@@ -121,7 +124,7 @@
                             <label class="label-checkbox">
                                 <input class="real-checkbox" type="checkbox">
                                 <span class="custom-checkbox"></span>
-                                <span>Комбинированные: море, горы, города, лес. Далеко-далеко за словесными горами в стране гласных и согласных живут, рыбные тексты. Заголовок безопасную языком рот приставка, прямо коварный, предложения послушавшись вскоре великий даже бросил снова грамматики ее по всей залетают первую рыбными!</span>
+                                <span>Комбинированные: море, горы, города, лес.</span>
                             </label>
                         </fieldset>
                             <!-- /Checkbox -->
