--- a/tracking.html
+++ b/tracking.html
@@ -29,10 +29,13 @@
                     <li class="header-nav-item"><a href="#">Галерея</a></li>
                     <li class="header-nav-item"><a href="./contacts.html">Контакты</a></li>
                 </ul>
+                <button class="header-nav-button">
+                    <img src="./img/icons/menu.svg" alt="menu">
+                </button>
             </nav>
         </div>
     </header>
-    <main class="inner-page">
+    <main class="inner-page inner-page--tracking">
         <div class="container">
             <div class="inner-page-article-row">
                     <nav class="inner-page-article-nav">
@@ -47,9 +50,9 @@
                     </nav>
                 <article class="inner-page-article">
                     <h1>Трекинг походы</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <b>Ut enim ad minim</b> veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <a href="#">Duis aute irure</a> dolor in reprehenderit <b>in voluptate</b> velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <b>Ut enim ad minim</b> veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <a href="#">Duis</a><a href="#">aute irure</a> dolor in reprehenderit <b>in voluptate</b> velit esse cillum dolore eu fugiat nulla pariatur.</p>
                     <img src="./img/articles/tracking-page-1.jpg" alt="Трекинг походы">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <b>Ut enim ad minim</b> veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <a href="#">Duis aute irure</a> dolor in reprehenderit <b>in voluptate</b> velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <b>Ut enim ad minim</b> veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <a href="#">Duis</a><a href="#">aute irure</a> dolor in reprehenderit <b>in voluptate</b> velit esse cillum dolore eu fugiat nulla pariatur.</p>
                     <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
 
                     <h2>Заголовок второго уровня</h2>
